change open && add text animation && fix button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@ body {
 }
 .extenstion-container {
     font-family: PoppinsMedium;
-    transition: .8s;
 }
 
 .width-500 {
@@ -28,37 +27,15 @@ body {
 }
 .closed {
     margin-right: -500px;
-    width: 0;
 }
 .opened {
     margin: 0;
 }
-@media (max-width: 1400px) {
-    .width-500 {
-        width: 450px;
-    }
-    .closed {
-        margin-right: -450px;
-        width: 0;
-    }
+.side-close {
+    margin: 0;
 }
-@media (max-width: 1200px) {
-    .width-500 {
-        width: 400px;
-    }
-    .closed {
-        margin-right: -400px;
-        width: 0;
-    }
-}
-@media (max-width: 800px) {
-    .width-500 {
-        width: 350px;
-    }
-    .closed {
-        margin-right: -350px;
-        width: 0;
-    }
+.side-open {
+    margin-right: 500px;
 }
 
 .text-405974 {
@@ -82,5 +59,85 @@ body {
     }
     to {
         rotate: 360deg;
+    }
+}
+
+.cursor {
+    display: inline-block;
+    width: 1ch;
+    animation: flicker 0.5s infinite;
+    margin-bottom: 4px;
+}
+@keyframes flicker {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+}
+.types {
+    position: relative;
+}
+.types::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    height: 2px;
+    width: calc(100% + 33px);
+    background: #fff;
+}
+.arrow-animation {
+    animation: arrows 1s infinite;
+}
+@keyframes arrows {
+    to {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+}
+@media (max-width: 1400px) {
+    .width-500 {
+        width: 450px;
+    }
+    .closed {
+        margin-right: -450px;
+    }
+    .types::after {
+        width: calc(100% + 20px);
+    }
+    .side-open {
+        margin-right: 450px;
+    }
+}
+@media (max-width: 1200px) {
+    .width-500 {
+        width: 400px;
+    }
+    .closed {
+        margin-right: -400px;
+    }
+    .types::after {
+        width: calc(100% + 8px);
+    }
+    .side-open {
+        margin-right: 400px;
+    }
+}
+@media (max-width: 800px) {
+    .width-500 {
+        width: 350px;
+    }
+    .closed {
+        margin-right: -350px;
+    }
+    .types::after {
+        width: 100%;
+    }
+    .side-open {
+        margin-right: 350px;
     }
 }
